--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,9 +1,9 @@
-Django~=5.0.1
-djangorestframework~=3.14.0
-django-filter~=23.5
-pip~=23.3.1
-wheel~=0.42.0
-pillow~=10.2.0
-setuptools~=69.0.2
-asgiref~=3.7.2
-sqlparse~=0.4.4
+asgiref==3.7.2
+Django==5.0.1              
+django-cors-headers==4.3.1 
+django-filter==23.5        
+djangorestframework==3.14.0
+pillow==10.2.0             
+pytz==2023.3.post1         
+sqlparse==0.4.4
+tzdata==2023.4
