--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@main
       - name: Install dependencies
         run: npm install
+        working-directory: front/
       - name: Build dependencies
         run: npm run build
       - name: Archive production artifact
