--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@main
       - name: Install dependencies
-        run: npm install ./front/package.json
+        run: npm install ./front/
       - name: Build dependencies
         run: npm run build
       - name: Archive production artifact
