--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: Deploy
     steps:
       - name: Checkout repository
         uses: actions/checkout@main
