--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: Deploy
+    needs: web-deploy
     steps:
       - name: Checkout repository
         uses: actions/checkout@main
