--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: npm install ./front/
       - name: Build dependencies
-        run: npm run build ./front/package.json
+        run: npm run build
       - name: Archive production artifact
         uses: actions/upload-artifact@main
         with:
