--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "swiper": "^11.0.5",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
